--- a/6-estados.html
+++ b/6-estados.html
@@ -20,7 +20,17 @@
       return (
         <main>
           <p>Contador: {counter}</p>
-    <button onClick={() => setCounter(10)}>Atualizar</button>
+          <button onClick={() => setCounter(0)}>Zerar</button>
+          <button 
+            onClick={() => setCounter((prevValue) => prevValue + 1)}
+          >
+            Incrementar
+          </button>
+          <button 
+            onClick={() => setCounter((prevValue) => prevValue - 1)}
+          >
+            Decrementar
+          </button>
         </main>
       )
     }
